tests/sksl/errors/ReservedNameTypedef.glsl
### Compilation failed:

error: 1: name 'typedef' is reserved
int typedef;
    ^^^^^^^
1 error
